--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mg-hello-mars",
-  "version": "1.0.2",
+  "version": "1.1.0-beta.0",
   "description": "Say hello to Mars",
   "main": "index.js",
   "scripts": {
